errorlog-20190615-174450+0600-1560599090-32-32-0.log

Turn 1
================================================================
error: failed to decode bot message: ")" (at position 5)
Last input received was:
    )th
      ^
SyntaxError: invalid syntax

